[gd_scene load_steps=3 format=3 uid="uid://w48b71tv2d4v"]

[ext_resource type="Script" uid="uid://2fu7dhm72l7r" path="res://addons/MetroidvaniaSystem/Database/Viewer/CollectibleElement.gd" id="1_1bebr"]
[ext_resource type="Script" uid="uid://celtpddhdfods" path="res://addons/MetroidvaniaSystem/Database/EditorIconButton.gd" id="2_3d05g"]

[node name="Collectible" type="PanelContainer"]
script = ExtResource("1_1bebr")
metadata/is_collectible = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Node Name"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
script = ExtResource("2_3d05g")
icon_name = "Remove"

[node name="IconContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/IconContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Icon"

[node name="ResourcePicker" type="EditorResourcePicker" parent="VBoxContainer/IconContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
base_type = "Texture2D"

[node name="SaveTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="text_changed" from="VBoxContainer/HBoxContainer2/LineEdit" to="SaveTimer" method="start" unbinds=1]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Button" to="." method="delete"]
[connection signal="resource_changed" from="VBoxContainer/IconContainer/ResourcePicker" to="." method="_on_resource_selected"]
[connection signal="timeout" from="SaveTimer" to="." method="_on_name_changed"]
